# net-sight

./: .gitignore  README.md  net-sight  pyproject.toml
config/: default.yaml
example/: schema.txt
src/net_sight/: __init__.py  __main__.py  cli.py  pipeline.py
src/net_sight/analyze/: __init__.py  ollama_client.py  passes.py  prompts.py
src/net_sight/cv/: __init__.py  colors.py  lines.py  ocr.py  pipeline.py  shapes.py
src/net_sight/merge/: __init__.py  consolidate.py
src/net_sight/output/: __init__.py  markdown.py
src/net_sight/preprocess/: __init__.py  autotune.py  color.py  enhance.py  morphology.py  pipeline.py
src/net_sight/tiling/: __init__.py  autotune.py  grid.py  smart.py
