[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "net-sight"
version = "0.1.0"
description = "Network architecture diagram analyzer - CV preprocessing + VLM multi-pass analysis"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.9",
    "numpy>=1.26",
    "easyocr>=1.7",
    "ollama>=0.4",
    "pyyaml>=6.0",
    "Pillow>=10.0",
    "scikit-learn>=1.4",
]

[project.scripts]
net-sight = "net_sight.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
